# xxWeakPtr

./: .gitignore  CHANGELOG.md  CmakeLists.txt  README.md  build.bat
examples/: CMakeLists.txt  basic_usage.cpp
tests/: CmakeLists.txt  main_test.cpp  test_xxWeakPtr.cpp
xxWeakPtr/: CmakeLists.txt  xxRefObject.cpp  xxRefObject.h  xxWeakPtr.h  xxWeakPtrExport.h
xxWeakPtr/cmake/: xxWeakPtrConfig.cmake.in
